N°4460 - Fix import contrast in Darkmoon

--- a/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
+++ b/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
@@ -273,3 +273,7 @@ $ibo-datamodel-viewer--lifecycle--code--color: $ibo-color-grey-300;
 $ibo-datamodel-viewer--lifecycle--stimuli--color: $ibo-color-blue-300;
 $ibo-datamodel-viewer--lifecycle--attribute-option--color: $ibo-color-pink-300;
 $ibo-datamodel-viewer--schema--tooltip--fill: $ibo-color-grey-600;
+
+$ibo-csv-import--row-error--background-color: $ibo-color-red-950;
+$ibo-csv-import--cell-error--color: $ibo-color-red-500;
+$ibo-csv-import--cell-modified--color: $ibo-color-blue-500;
